# gitlab-reviews

./: .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: app.vue  index.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command.rs  config.rs  http.rs  main.rs  tray.rs
src-tauri/src/models/: random.rs
src/components/: GitlabMRs.vue  auto-resize.vue  change-theme.vue  icon.vue  tabbar.vue
src/constants/: index.ts
src/models/: config.ts
src/router/: index.ts
src/services/: gitlab.ts
src/stores/: gitlab.ts  settings.ts
src/styles/: global.scss  tailwind.css
src/utils/: request.ts
src/views/home/: index.vue
src/views/settings/: index.vue
